--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.1",
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.1",
+    "react-draggable": "^4.4.3",
     "react-feather": "^2.0.9",
     "react-jss": "^10.6.0",
     "react-modal": "^3.13.1",
