--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^8.3.1",
     "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.1.0",
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.1",
     "react-draggable": "^4.4.3",
