--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.10.6",
+    "swiper": "^6.7.5",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
