--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-feather": "^2.0.9",
     "react-jss": "^10.6.0",
     "react-modal": "^3.13.1",
+    "react-page-visibility": "^6.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.10.6",
